samples/_failures_safe/1761489135_f34a5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_695de064.c: In function ‘main’:
./samples/SAFE/__tmp_695de064.c:153:5: error: expected declaration or statement at end of input
  153 |     printf("\n");
      |     ^~~~~~
